# nlp_classification_and_vector_spaces

./: README.md  pyproject.toml
week1/: C1_W1_Assignment.ipynb
week1/lecture/: C1_W1_lecture_nb_01_preprocessing.ipynb  C1_W1_lecture_nb_02_word frequencies.ipynb  C1_W1_lecture_nb_03_logistic_regression_model.ipynb
week2/: assignment.ipynb
week2/lecture/: C1_W2_lecture_nb_01_visualizing_naive_bayes.ipynb  assignment.ipynb
week3/: assignment.ipynb
week3/lecture/: C1_W3_lecture_nb_01_linear_algebra.ipynb  C1_W3_lecture_nb_02_manipulating_word_embeddings.ipynb  C1_W3_lecture_nb_03_pca.ipynb
week4/: assignment.ipynb
week4/lecture/: C1_W4_lecture_nb_01_vector_manipulation.ipynb  C1_W4_lecture_nb_02_hash_functions_and_multiplanes.ipynb
