[tool.poetry]
name = "nlp-classification-and-vector-spaces"
version = "0.1.0"
description = ""
authors = ["Matthew G Hogan <matthewghogan@pm.me>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.10.8"
jupyter = "^1.0.0"
nltk = "^3.8.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
