[tool.poetry]
name = "nlp-classification-and-vector-spaces"
version = "0.1.0"
description = ""
authors = ["Matthew G Hogan <matthewghogan@pm.me>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3"
nltk = "3.4.5"
pandas = ">=1"
python = "3.7.16"
scikit-learn = "0.22.2.post1"
#pytest = ">=7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
